--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,5 +1,7 @@
 # Python CircleCI 2.0 configuratiin file
 version: 2
+orbs:
+  codecov: codecov/codecov@2.0.15
 jobs:
   build:
     docker:
@@ -20,7 +22,8 @@ jobs:
       # Step 3: Run linter and test
       - run:
           name: run test
-          command:
+          command: |
             . venv/bin/activate
             flake8 --exclude=venv* --statistics
             pytest -v --cov=data_graph
+            codecov --token=127d7807-d0b9-4187-ab79-af7f4ed283
