--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,5 +25,5 @@ jobs:
           command: |
             . venv/bin/activate
             flake8 --exclude=venv* --statistics
-            python -m pytest -v --cov=data_graph
+            python -m pytest -v --cov
             codecov --token=127d7807-d0b9-4187-ab79-af7f4ed283
